--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\Micaela\\AppData\\Roaming\\NetBeans\\12.4\\tomcat80.properties
-j2ee.server.home=C:/Users/Micaela/Desktop/apache-tomcat-8.0.53
-j2ee.server.instance=tomcat80:home=C:\\Users\\Micaela\\Desktop\\apache-tomcat-8.0.53
+j2ee.server.home=C:/xampp/tomcat
+j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
 selected.browser=Chrome
 user.properties.file=C:\\Users\\Micaela\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
